--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "nuvidio-widget-js",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Package to use NuVidio Widget in js applications",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "NuVidio",
